# llm-contract-analyzer

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
app/: main.py
app/api/: router.py
app/api/endpoints/: __init__.py  pdf_routes.py  preprocess_routes.py  semantic_search_routes.py
app/data/: processed_contracts.json
app/data/chroma_langchain_db/: chroma.sqlite3
app/prompts/: extract_clause_prompt.md  extract_summary_prompt.md
app/services/: gemini_service.py  langchain_services.py  preprocess_pdf.py
app/utils/: utils.py
output/: final_output.json
