[project]
name = "llm-contract-analyzer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "google-genai>=1.29.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-core>=0.3.72",
    "langchain-voyageai>=0.1.7",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
